[Feat] 자배 짝수와 홀수 업뎃

--- a/Level 1/짝수와 홀수.md
+++ b/Level 1/짝수와 홀수.md
@@ -4,3 +4,10 @@ function solution(num) {
     return num % 2 ? "Odd" : "Even";
 }
 ```
+
+jabae
+```js
+function solution(num) {
+    return num % 2 ? "Odd" : "Even";
+}
+```
