[Feat] 자배 평균구하기 업뎃

--- a/Level 1/평균 구하기.md
+++ b/Level 1/평균 구하기.md
@@ -5,3 +5,10 @@ function solution(arr) {
     return parseInt(arr.reduce((a, b) => a + b, )) / cnt;
 }
 ```
+
+jabae
+```js
+function solution(arr) {
+    return arr.reduce((i, ret) => i + ret) / arr.length;
+}
+```
