[Feat] 자배 최댓값과 최솟값 업뎃

--- a/Level 2/최댓값과 최솟값.md
+++ b/Level 2/최댓값과 최솟값.md
@@ -6,3 +6,11 @@ function solution(s) {
     return `${min} ${max}`
 }
 ```
+
+jabae
+```js
+function solution(s) {
+    arr = s.split(' ').sort((a, b) => a - b);
+    return `${arr[0]} ${arr[arr.length - 1]}`;
+}
+```
