[Feat] 자배 최솟값 만들기 업뎃

--- a/Level 2/최솟값 만들기.md
+++ b/Level 2/최솟값 만들기.md
@@ -8,3 +8,27 @@ function solution(A,B){
     return answer;
 }
 ```
+
+jabae
+```js
+function solution(A,B){
+    let a = A.sort((a, b) => a - b);
+    let b = B.sort((a, b) => a - b);
+    let ret = 0;
+    while (a.length) {
+        let case1 = a[0] * b[b.length - 1];
+        let case2 = b[0] * a[b.length - 1];
+        if (case1 < case2) {
+            a = a.slice(1);
+            b.pop();
+            ret += case1;
+        }
+        else {
+            a.pop();
+            b = b.slice(1);
+            ret += case2;
+        }
+    }
+    return ret;
+}
+```
