[Feat] Add daekim Code

--- a/Level 1/짝수와 홀수.md
+++ b/Level 1/짝수와 홀수.md
@@ -1,13 +1,24 @@
 jihyukim
+
 ```js
 function solution(num) {
-    return num % 2 ? "Odd" : "Even";
+  return num % 2 ? 'Odd' : 'Even';
 }
 ```
 
 jabae
+
 ```js
 function solution(num) {
-    return num % 2 ? "Odd" : "Even";
+  return num % 2 ? 'Odd' : 'Even';
+}
+```
+
+daekim
+
+```js
+function solution(num) {
+  var answer = num % 2 === 0 ? 'Even' : 'Odd';
+  return answer;
 }
 ```
