--- a/Level 1/평균 구하기.md
+++ b/Level 1/평균 구하기.md
@@ -1,14 +1,27 @@
 jihyukim
+
 ```js
 function solution(arr) {
-    const cnt = arr.length;
-    return parseInt(arr.reduce((a, b) => a + b, )) / cnt;
+  const cnt = arr.length;
+  return parseInt(arr.reduce((a, b) => a + b)) / cnt;
 }
 ```
 
 jabae
+
 ```js
 function solution(arr) {
-    return arr.reduce((i, ret) => i + ret) / arr.length;
+  return arr.reduce((i, ret) => i + ret) / arr.length;
+}
+```
+
+daekim
+
+```js
+function solution(arr) {
+  var answer = 0;
+  for (let i = 0; i < arr.length; i++) answer += arr[i];
+  answer = answer / arr.length;
+  return answer;
 }
 ```
