--- a/Level 2/최댓값과 최솟값.md
+++ b/Level 2/최댓값과 최솟값.md
@@ -1,16 +1,35 @@
 jihyukim
+
 ```js
 function solution(s) {
-    var max = s.split(" ").reduce((a, b) => +a > +b ? a : b, );
-    var min = s.split(" ").reduce((a, b) => +a < +b ? a : b, );
-    return `${min} ${max}`
+  var max = s.split(' ').reduce((a, b) => (+a > +b ? a : b));
+  var min = s.split(' ').reduce((a, b) => (+a < +b ? a : b));
+  return `${min} ${max}`;
 }
 ```
 
 jabae
+
 ```js
 function solution(s) {
-    arr = s.split(' ').sort((a, b) => a - b);
-    return `${arr[0]} ${arr[arr.length - 1]}`;
+  arr = s.split(' ').sort((a, b) => a - b);
+  return `${arr[0]} ${arr[arr.length - 1]}`;
+}
+```
+
+daekim
+
+```js
+function solution(s) {
+  var answer = '';
+  let arr = s.split(' ');
+  for (let i = 0; i < arr.length; i++) arr[i] = Number(arr[i]);
+  arr.sort(function compare(a, b) {
+    if (a > b) return 1;
+    if (a < b) return -1;
+    return 0;
+  });
+  answer = arr[0] + ' ' + arr[arr.length - 1];
+  return answer;
 }
 ```
