--- a/Level 2/최솟값 만들기.md
+++ b/Level 2/최솟값 만들기.md
@@ -1,34 +1,55 @@
 jihyukim
+
 ```js
-function solution(A,B){
-    var answer = 0;
-    A.sort((a, b) => a - b);
-    B.sort((a, b) => b - a);
-    for (let i = 0; i < A.length; i++) answer += A[i] * B[i];
-    return answer;
+function solution(A, B) {
+  var answer = 0;
+  A.sort((a, b) => a - b);
+  B.sort((a, b) => b - a);
+  for (let i = 0; i < A.length; i++) answer += A[i] * B[i];
+  return answer;
 }
 ```
 
 jabae
+
 ```js
-function solution(A,B){
-    let a = A.sort((a, b) => a - b);
-    let b = B.sort((a, b) => a - b);
-    let ret = 0;
-    while (a.length) {
-        let case1 = a[0] * b[b.length - 1];
-        let case2 = b[0] * a[b.length - 1];
-        if (case1 < case2) {
-            a = a.slice(1);
-            b.pop();
-            ret += case1;
-        }
-        else {
-            a.pop();
-            b = b.slice(1);
-            ret += case2;
-        }
+function solution(A, B) {
+  let a = A.sort((a, b) => a - b);
+  let b = B.sort((a, b) => a - b);
+  let ret = 0;
+  while (a.length) {
+    let case1 = a[0] * b[b.length - 1];
+    let case2 = b[0] * a[b.length - 1];
+    if (case1 < case2) {
+      a = a.slice(1);
+      b.pop();
+      ret += case1;
+    } else {
+      a.pop();
+      b = b.slice(1);
+      ret += case2;
     }
-    return ret;
+  }
+  return ret;
+}
+```
+
+daekim
+
+```js
+function solution(A, B) {
+  var answer = 0;
+  A.sort(function compare(a, b) {
+    if (a > b) return 1;
+    if (a < b) return -1;
+    return 0;
+  });
+  B.sort(function compare(a, b) {
+    if (a > b) return 1;
+    if (a < b) return -1;
+    return 0;
+  });
+  for (let i = 0; i < A.length; i++) answer += A[i] * B[A.length - i - 1];
+  return answer;
 }
 ```
