[Fix] jihyukim 코드 수정

--- a/Level 2/최솟값 만들기.md
+++ b/Level 2/최솟값 만들기.md
@@ -2,7 +2,7 @@ jihyukim
 
 ```js
 function solution(A, B) {
-  var answer = 0;
+  let answer = 0;
   A.sort((a, b) => a - b);
   B.sort((a, b) => b - a);
   for (let i = 0; i < A.length; i++) answer += A[i] * B[i];
