--- a/Level 2/최댓값과 최솟값.md
+++ b/Level 2/최댓값과 최솟값.md
@@ -2,8 +2,8 @@ jihyukim
 
 ```js
 function solution(s) {
-  var max = s.split(' ').reduce((a, b) => (+a > +b ? a : b));
-  var min = s.split(' ').reduce((a, b) => (+a < +b ? a : b));
+  let max = s.split(' ').reduce((a, b) => (+a > +b ? a : b));
+  let min = s.split(' ').reduce((a, b) => (+a < +b ? a : b));
   return `${min} ${max}`;
 }
 ```
