[Feat] 자배 제일 작은 수 제거하기 업뎃

--- a/Level 1/제일 작은 수 제거하기.md
+++ b/Level 1/제일 작은 수 제거하기.md
@@ -5,3 +5,11 @@ function solution(arr) {
     return arr.length ? arr : [-1];
 }
 ```
+
+jabae
+```js
+function solution(arr) {
+    arr.splice(arr.indexOf(Math.min(...arr)), 1);
+    return arr.length ? arr : [-1];
+}
+```
