--- a/Level 1/음양 더하기.md
+++ b/Level 1/음양 더하기.md
@@ -4,3 +4,10 @@ function solution(absolutes, signs) {
     return absolutes.reduce((acc, cur, i) => acc + cur * (signs[i] ? 1 : -1), 0);
 }
 ```
+
+jabae
+```js
+function solution(absolutes, signs) {
+    return absolutes.reduce((a, b, i) => signs[i] ? a + b : a - b, 0);
+}
+```
