[Feat] 자배 뉴스클러스터링 업뎃

--- a/Level 2/[1차] 뉴스 클러스터링.md
+++ b/Level 2/[1차] 뉴스 클러스터링.md
@@ -32,3 +32,45 @@ function solution(str1, str2) {
     return Math.floor(getJaccard(el1, el2) * 65536);
 }
 ```
+
+jabae
+```js
+unction solution(str1, str2) {
+    const makePrizeArr = (str) => {
+        const regex = /^[a-z]$/;
+        let ret = [];
+        let strDup = str.toLowerCase();
+        for(let i = 0; i < str.length - 1; i++) {
+            if (regex.test(strDup[i]) && regex.test(strDup[i + 1]))
+                ret.push(strDup[i] + strDup[i + 1]);
+        }
+        return ret;
+    }
+    const makeInter = (arr1, arr2) => {
+        let inter = [];
+        for(let i = 0; i < arr1.length; i++) {
+            if (arr2.includes(arr1[i])) {
+                inter.push(arr1[i]);
+                arr2.splice(arr2.indexOf(arr1[i]), 1);
+            }
+        }
+        return inter;
+    }
+    const makeUnion = (arr1, arr2, inter) => {
+        for(let i = 0; i < inter.length; i++) {
+            if (arr1.includes(inter[i]))
+                arr1.splice(arr1.indexOf(inter[i]), 1);
+            if (arr2.includes(inter[i]))
+                arr2.splice(arr2.indexOf(inter[i]), 1);
+        }
+        return [...arr1, ...arr2, ...inter];  
+    }
+    let str1Arr = makePrizeArr(str1);
+    let str2Arr = makePrizeArr(str2);
+    let inter = makeInter([...str1Arr], [...str2Arr]);
+    let union = makeUnion([...str1Arr], [...str2Arr], inter);
+    // let jaccard = inter.length / union.length;
+    // return jaccard ? parseInt(jaccard * 65536) : 1 * 65536;
+    return union.length === 0 ? 65536 : Math.floor((inter.length / union.length) * 65536)
+}
+```
