[Feat] daekim 코드추가

--- a/Level 1/음양 더하기.md
+++ b/Level 1/음양 더하기.md
@@ -1,13 +1,29 @@
 jihyukim
+
 ```js
 function solution(absolutes, signs) {
-    return absolutes.reduce((acc, cur, i) => acc + cur * (signs[i] ? 1 : -1), 0);
+  return absolutes.reduce((acc, cur, i) => acc + cur * (signs[i] ? 1 : -1), 0);
 }
 ```
 
 jabae
+
 ```js
 function solution(absolutes, signs) {
-    return absolutes.reduce((a, b, i) => signs[i] ? a + b : a - b, 0);
+  return absolutes.reduce((a, b, i) => (signs[i] ? a + b : a - b), 0);
+}
+```
+
+daekim
+
+```js
+function solution(absolutes, signs) {
+  let sum = 0;
+
+  for (let i = 0; i < signs.length; i++) {
+    if (signs[i] === false) absolutes[i] *= -1;
+    sum += absolutes[i];
+  }
+  return sum;
 }
 ```
