--- a/Level 2/[1차] 뉴스 클러스터링.md
+++ b/Level 2/[1차] 뉴스 클러스터링.md
@@ -1,39 +1,41 @@
 jihyukim
+
 ```js
 function solution(str1, str2) {
-    function makeElement(str) {
-        const regex = /^[a-z]+$/;
-        return str
-            .toLowerCase()
-            .split("")
-            .map((cur, i, arr) => cur + arr[i + 1])
-            .slice(0,-1)
-            .filter(el => regex.test(el))
-    }
-    
-    function getJaccard(el1, el2) {
-        let inter = 0;
-        let union = 0;
-        el1.forEach((el) => {
-            const idx = el2.indexOf(el);
-            union += 1;
-            if (idx >= 0) {
-                inter += 1;
-                el2.splice(idx, 1);
-            }
-        })
-        union += el2.length;
-        return union ? inter / union : 1;
-    }
-    
-    const el1 = makeElement(str1);
-    const el2 = makeElement(str2);
+  function makeElement(str) {
+    const regex = /^[a-z]+$/;
+    return str
+      .toLowerCase()
+      .split('')
+      .map((cur, i, arr) => cur + arr[i + 1])
+      .slice(0, -1)
+      .filter((el) => regex.test(el));
+  }
 
-    return Math.floor(getJaccard(el1, el2) * 65536);
+  function getJaccard(el1, el2) {
+    let inter = 0;
+    let union = 0;
+    el1.forEach((el) => {
+      const idx = el2.indexOf(el);
+      union += 1;
+      if (idx >= 0) {
+        inter += 1;
+        el2.splice(idx, 1);
+      }
+    });
+    union += el2.length;
+    return union ? inter / union : 1;
+  }
+
+  const el1 = makeElement(str1);
+  const el2 = makeElement(str2);
+
+  return Math.floor(getJaccard(el1, el2) * 65536);
 }
 ```
 
 jabae
+
 ```js
 unction solution(str1, str2) {
     const makePrizeArr = (str) => {
@@ -63,7 +65,7 @@ unction solution(str1, str2) {
             if (arr2.includes(inter[i]))
                 arr2.splice(arr2.indexOf(inter[i]), 1);
         }
-        return [...arr1, ...arr2, ...inter];  
+        return [...arr1, ...arr2, ...inter];
     }
     let str1Arr = makePrizeArr(str1);
     let str2Arr = makePrizeArr(str2);
@@ -72,5 +74,36 @@ unction solution(str1, str2) {
     // let jaccard = inter.length / union.length;
     // return jaccard ? parseInt(jaccard * 65536) : 1 * 65536;
     return union.length === 0 ? 65536 : Math.floor((inter.length / union.length) * 65536)
+}
+```
+
+daekim
+
+```js
+function solution(str1, str2) {
+  let arr1 = [];
+  let arr2 = [];
+  let inter = 0;
+  let union = 0;
+  let alpha = /[a-zA-Z]/;
+  let idx = 0;
+
+  for (let i = 0; i < str1.length - 1; i++)
+    if (alpha.test(str1[i]) && alpha.test(str1[i + 1]))
+      arr1[idx++] = str1[i].toUpperCase() + str1[i + 1].toUpperCase();
+  idx = 0;
+  for (let i = 0; i < str2.length - 1; i++)
+    if (alpha.test(str2[i]) && alpha.test(str2[i + 1]))
+      arr2[idx++] = str2[i].toUpperCase() + str2[i + 1].toUpperCase();
+  if (arr1.length + arr2.length === 0) return 65536;
+  union = arr1.length + arr2.length;
+  for (let i = 0; i < arr1.length; i++) {
+    if (arr2.indexOf(arr1[i]) > -1) {
+      inter++;
+      arr2.splice(arr2.indexOf(arr1[i]), 1, '0');
+    }
+  }
+  union -= inter;
+  return Math.floor((inter / union) * 65536);
 }
 ```
