--- a/Level 2/프린터.md
+++ b/Level 2/프린터.md
@@ -1,23 +1,42 @@
 jabae
+
 ```js
 function solution(priorities, location) {
-    let arr = priorities;
-    let loc = location;
-    let answer = 1;
-    const getLoc = (idx , arrLen) => idx ? --idx : arrLen - 1;
-    do {
-        let max = Math.max(...arr);
-        if (!loc && arr[0] === max)
-            break;
-        if (arr[0] !== max) {
-            arr.push(arr.shift());
-            loc = getLoc(loc, arr.length);
-        } else {
-            arr.shift();
-            answer++;
-            loc--;
-        }
-    } while (arr.length);
-    return answer;
+  let arr = priorities;
+  let loc = location;
+  let answer = 1;
+  const getLoc = (idx, arrLen) => (idx ? --idx : arrLen - 1);
+  do {
+    let max = Math.max(...arr);
+    if (!loc && arr[0] === max) break;
+    if (arr[0] !== max) {
+      arr.push(arr.shift());
+      loc = getLoc(loc, arr.length);
+    } else {
+      arr.shift();
+      answer++;
+      loc--;
+    }
+  } while (arr.length);
+  return answer;
+}
+```
+
+daekim
+
+```js
+function solution(priorities, location) {
+  let order = 1;
+  for (let i = 0; i < priorities.length; i++) {
+    if (priorities[i] === Math.max(...priorities)) {
+      if (i === location) return order;
+      priorities.splice(i, 1);
+      if (i < location) location--;
+      i--;
+      order++;
+    }
+    if (i >= priorities.length - 1) i = -1;
+  }
+  return order;
 }
 ```
