--- a/Level 1/제일 작은 수 제거하기.md
+++ b/Level 1/제일 작은 수 제거하기.md
@@ -1,15 +1,35 @@
 jihyukim
+
 ```js
 function solution(arr) {
-    arr.splice(arr.indexOf(Math.min(...arr)), 1);
-    return arr.length ? arr : [-1];
+  arr.splice(arr.indexOf(Math.min(...arr)), 1);
+  return arr.length ? arr : [-1];
 }
 ```
 
 jabae
+
 ```js
 function solution(arr) {
-    arr.splice(arr.indexOf(Math.min(...arr)), 1);
-    return arr.length ? arr : [-1];
+  arr.splice(arr.indexOf(Math.min(...arr)), 1);
+  return arr.length ? arr : [-1];
+}
+```
+
+daekim
+
+```js
+function solution(arr) {
+  if (arr.length === 0 || arr.length === 1) return [-1];
+  let min = arr[0];
+  let idx = 0;
+  for (let i = 0; i < arr.length; i++) {
+    if (min > arr[i]) {
+      min = arr[i];
+      idx = i;
+    }
+  }
+  arr.splice(idx, 1);
+  return arr;
 }
 ```
