[Feat] jihyukim 코드 추가

--- a/Level 2/프린터.md
+++ b/Level 2/프린터.md
@@ -40,3 +40,18 @@ function solution(priorities, location) {
   return order;
 }
 ```
+
+jihyukim
+```js
+function solution(pri, loc) {
+    let ret = 0;
+    while (pri.length) {
+        if (pri[0] !== Math.max(...pri)) pri.push(pri[0]);
+        else if (!loc) break;
+        else ret++;
+        pri.shift();
+        loc = (loc || pri.length) - 1;
+    }
+    return ret + 1;
+}
+```
