--- a/Level 1/05. 없는 숫자 더하기.md
+++ b/Level 1/05. 없는 숫자 더하기.md
@@ -4,3 +4,11 @@ function solution(numbers) {
     return 45 - numbers.reduce((acc, cur) => acc + cur);
 }
 ```
+
+jabae
+```js
+function solution(numbers) {
+    let arr = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9];
+    return arr.reduce((a, b) => numbers.includes(b) ? a : a + b, 0);
+}
+```
