--- a/Level 2/05. [1차] 뉴스 클러스터링.md
+++ b/Level 2/05. [1차] 뉴스 클러스터링.md
@@ -37,7 +37,7 @@ function solution(str1, str2) {
 jabae
 
 ```js
-unction solution(str1, str2) {
+function solution(str1, str2) {
     const makePrizeArr = (str) => {
         const regex = /^[a-z]$/;
         let ret = [];
