[Feat] jihyukim 코드 추가

--- a/Level 1/06. 수박수박수박수박수박수?.md
+++ b/Level 1/06. 수박수박수박수박수박수?.md
@@ -9,3 +9,9 @@ function solution(n) {
     return answer;
 }
 ```
+jihyukim
+```js
+function solution(n) {
+    return '수박'.repeat(n/2 + 1).slice(0, n);
+}
+```
