--- a/Level 2/08. 주차 요금 계산.md
+++ b/Level 2/08. 주차 요금 계산.md
@@ -27,3 +27,37 @@ function solution(fees, records) {
     return res;
 }
 ```
+
+jabae
+```js
+function solution(fees, records) {
+    let answer = [];
+    const getMin = (carNumber) => {
+        let thisArr = records.reduce((acc, cur) => { 
+            if (cur.slice(6, 10) === carNumber) acc.push(cur.slice(0, 5));
+            return acc;
+        }, []);
+        if (thisArr.length % 2) thisArr.push("23:59");
+        let min = thisArr.reduce((acc, cur, i) => {
+            if (i % 2) return acc;
+            let startTime = Number(cur.slice(0, 2)) * 60 + Number(cur.slice(3));
+            let endTime = Number(thisArr[i + 1].slice(0, 2)) * 60 + Number(thisArr[i + 1].slice(3));
+            return acc += (endTime - startTime);
+        }, 0)
+        return min;
+    }
+    const getFee = (time) => {
+        return time - fees[0] > 0 ?  fees[1] + (Math.ceil((time - fees[0]) / fees[2]) * fees[3]) : fees[1];
+    }
+    while (records.length) {
+        let cur = {};
+        cur.carNumber = records[0].slice(6, 10);
+        cur.stayTime = getMin(cur.carNumber);
+        cur.fee = getFee(cur.stayTime);
+        answer.push(cur);
+        records = records.filter((el) => el.slice(6, 10) !== cur.carNumber);
+    }
+    return answer.sort((a, b) => a.carNumber - b.carNumber).map(el => el.fee);
+}
+```
+
