--- a/Level 2/09. [3차] 압축.md
+++ b/Level 2/09. [3차] 압축.md
@@ -17,3 +17,26 @@ function solution(msg) {
     return ret;
 }
 ```
+
+jabae
+```js
+unction solution(msg) {
+    let dic = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z'];
+    let answer = [];
+    let str = '';
+    let idx = 0;
+    while (msg.length) {
+        let i = 0;
+        while (++i <= msg.length) {
+            str = msg.slice(0, i);
+            let tmp = dic.indexOf(str);
+            if (tmp < 0 ) break;
+            else idx = tmp + 1;
+        }
+        dic.push(str);
+        answer.push(idx);
+        msg = msg.slice(i - 1);
+    }
+    return answer;
+}
+```
