--- a/Level 2/07. 타겟 넘버.md
+++ b/Level 2/07. 타겟 넘버.md
@@ -14,3 +14,20 @@ function solution(numbers, target) {
     return calc(0, 0);
 }
 ```
+
+jabae
+```js
+function solution(numbers, target) {
+    let answer = 0;
+    const dfs = (arr, aim) => {
+        if (!arr.length && !aim) 
+            return ++answer;
+        else if (!arr.length && aim)
+            return ;
+        dfs(arr.slice(1), aim + arr[0]);
+        dfs(arr.slice(1), aim - arr[0]);
+    }
+    dfs(numbers, target);
+    return answer;
+}
+```
