--- a/Level 1/06. 수박수박수박수박수박수?.md
+++ b/Level 1/06. 수박수박수박수박수박수?.md
@@ -15,3 +15,14 @@ function solution(n) {
     return '수박'.repeat(n/2 + 1).slice(0, n);
 }
 ```
+
+daekim
+```js
+function solution(n) {
+    let str = "";
+    
+    for (let i = 0; i < n; i++)
+        str += i % 2 === 0 ? "수" : "박";
+    return str;
+}
+```
