[Feat] daekim 코드 추가

--- a/Level 1/05. 없는 숫자 더하기.md
+++ b/Level 1/05. 없는 숫자 더하기.md
@@ -12,3 +12,12 @@ function solution(numbers) {
     return arr.reduce((a, b) => numbers.includes(b) ? a : a + b, 0);
 }
 ```
+
+daekim
+```js
+function solution(numbers) {
+    let sum = 45;
+    numbers.forEach(numbers => sum -= numbers);
+    return sum;
+}
+```
