[Feat] daekim 코드 추가

--- a/Level 2/07. 타겟 넘버.md
+++ b/Level 2/07. 타겟 넘버.md
@@ -31,3 +31,25 @@ function solution(numbers, target) {
     return answer;
 }
 ```
+
+daekim
+```js
+function solution(numbers, target) {
+    let cnt = 0;
+    let sum = 0;
+
+    function rec(arr, goal)
+    {
+        if (arr.length === 0 && goal === 0)
+            return 0;
+        else if (arr.length === 0 && goal !== 0)
+            return 1;
+        rec(arr.slice(0, -1), goal + arr[arr.length - 1]) === 0 ? cnt++ : cnt;
+        rec(arr.slice(0, -1), goal - arr[arr.length - 1]) === 0 ? cnt++ : cnt;
+        return 1;
+    }
+    rec(numbers.slice(0, -1), target + numbers[numbers.length - 1]);
+    rec(numbers.slice(0, -1), target - numbers[numbers.length - 1]);
+    return cnt;
+}
+```
