--- a/Level 2/08. 주차 요금 계산.md
+++ b/Level 2/08. 주차 요금 계산.md
@@ -61,3 +61,54 @@ function solution(fees, records) {
 }
 ```
 
+daekim
+```js
+function solution(fees, records) {
+    let arr = [[]];
+    let tmp1 = [];
+    let tmp2 = [];
+    let i;
+    let min = 0;
+    let idx = 0;
+    let res = [];
+    for (i = 0; i < records.length; i++)
+    {
+        arr.push();
+        arr[i] = records[i].split(' ');
+    }
+    arr.sort((a, b) => a[1] - b[1]);
+    for (i = 0; i < arr.length - 1; i++)
+    {
+        if (arr[i][2] === "IN" && arr[i + 1][2] === 'OUT')
+        {
+            tmp1 = arr[i + 1][0].split(':');
+            tmp2 = arr[i][0].split(':');
+            min += ((tmp1[0] - tmp2[0]) * 60 + (tmp1[1] - tmp2[1]));
+        }
+        else if (arr[i][2] === "IN" && arr[i + 1][2] === 'IN')
+        {
+            tmp1 = arr[i][0].split(':');
+            min += ((23 - tmp1[0]) * 60 + (59 - tmp1[1]));
+            res.push(fees[1] + ((min - fees[0] > 0) ? Math.ceil((min - fees[0]) / fees[2]) * fees[3] : 0));
+            min = 0;
+            continue;
+        }
+        else if (arr[i][1] !== arr[i + 1][1])
+        {
+            res.push(fees[1] + ((min - fees[0] > 0) ? Math.ceil((min - fees[0]) / fees[2]) * fees[3] : 0));
+            min = 0;
+        }
+    }
+    if (i === arr.length - 1 || arr.length === 1)
+    {
+        if (arr[i][2] === 'IN')
+        {
+            tmp1 = arr[i][0].split(':');
+            min += ((23 - tmp1[0]) * 60 + (59 - tmp1[1]));
+        }
+        res.push(fees[1] + ((min - fees[0] > 0) ? Math.ceil((min - fees[0]) / fees[2]) * fees[3] : 0));
+    }
+    return res;
+}
+```
+
