[Feat] daekim 코드 추가

--- a/Level 2/09. [3차] 압축.md
+++ b/Level 2/09. [3차] 압축.md
@@ -40,3 +40,28 @@ unction solution(msg) {
     return answer;
 }
 ```
+
+daekim 
+```js
+function solution(msg) {
+    let dic = "ABCDEFGHIJKLMNOPQRSTUVWXYZ".split('');
+    let res = [];
+    let str, idx, tmp;
+    for (let i = 0; i < msg.length; i++)
+    {
+        str = "";
+        for(let j = i; i < msg.length; j++)
+        {
+            idx = tmp;
+            if ((tmp = dic.indexOf(str += msg[j])) < 0)
+            {
+                i = j - 1;
+                break ;
+            }
+        }
+        dic.push(str);
+        res.push(idx + 1);
+    }
+    return res;
+}
+```
