[Feat] 자배 오타 수정

--- a/Level 2/09. [3차] 압축.md
+++ b/Level 2/09. [3차] 압축.md
@@ -20,7 +20,7 @@ function solution(msg) {
 
 jabae
 ```js
-unction solution(msg) {
+function solution(msg) {
     let dic = ['A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z'];
     let answer = [];
     let str = '';
