[Refactor] daekim 알고리즘 수정

--- a/Level 2/06. k진수에서 소수 개수 구하기.md
+++ b/Level 2/06. k진수에서 소수 개수 구하기.md
@@ -36,23 +36,29 @@ daekim
 
 ```js
 function solution(n, k) {
-  let knum = n.toString(k).split('0');
-  let tmp;
-  let cnt = 0;
-
-  for (let i = 0; i < knum.length; i++) {
-    if (+knum[i] === 2) {
-      cnt++;
-      continue;
+    let knum = n.toString(k).split('0');
+    let num = 0;
+    let tmp;
+    let cnt = 0;
+    let sqrt = 0;
+    
+    for(let i = 0; i < knum.length; i++)
+    {
+        num = +knum[i]
+        if (num === 2)
+        {
+            cnt++;
+            continue;
+        }
+        if (num % 2 === 0 || num === 1 || num === '')
+            continue;
+        sqrt = Math.sqrt(num);
+        for (tmp = 3;tmp <= sqrt; tmp += 2)
+            if (num % tmp === 0)
+                break;
+        if (tmp > sqrt)
+            cnt++;
     }
-    if (+knum[i] % 2 === 0 || +knum[i] === 1 || knum[i] === '') continue;
-    tmp = 3;
-    while (tmp <= Math.sqrt(+knum[i])) {
-      if (+knum[i] % tmp === 0) break;
-      tmp += 2;
-    }
-    if (tmp > Math.sqrt(+knum[i])) cnt++;
-  }
-  return cnt;
+    return cnt;
 }
 ```
