--- a/Level 1/08. 내적.md
+++ b/Level 1/08. 내적.md
@@ -4,3 +4,10 @@ function solution(a, b) {
     return a.reduce((acc, cur, i) => acc + cur * b[i], 0);
 }
 ```
+
+jabae
+```js
+function solution(a, b) {
+    return a.reduce((acc, cur, i) => acc + (cur * b[i]), 0);
+}
+```
