[Feat] 자배 코드 업뎃

--- a/Level 1/07. 가운데 글자 가져오기.md
+++ b/Level 1/07. 가운데 글자 가져오기.md
@@ -4,3 +4,11 @@ function solution(s) {
     return s.substr(Math.floor((s.length - 1) / 2), s.length % 2 ? 1 : 2);
 }
 ```
+
+jabae
+```js
+function solution(s) {
+    const len = s.length;
+    return len % 2 ? s[Math.floor(len / 2)] : s[len / 2 - 1] + s[len / 2];
+}
+```
