[Feat] jihyukim 코드 추가

--- a/Level 2/10.오픈채팅방.md
+++ b/Level 2/10.오픈채팅방.md
@@ -1,5 +1,17 @@
 jihyukim
 ```js
+function solution(record) {
+    const rec = [];
+    const usr = {};
+    const msg = { Enter : '님이 들어왔습니다.', Leave : '님이 나갔습니다.' };
+    
+    record.forEach((c) => {
+        const arr = c.split(" ");
+        if (arr[2]) usr[arr[1]] = arr[2];
+        if (arr[0] !== 'Change') rec.push(arr);
+    })
+    return rec.map((c) => usr[c[1]] + msg[c[0]]);
+}
 ```
 
 jabae
