[Feat] 자배 코드 업뎃

--- a/Level 2/11. [3차]n진수 게임.md
+++ b/Level 2/11. [3차]n진수 게임.md
@@ -13,3 +13,18 @@ function solution(n, t, m, p) {
     return res.toUpperCase();
 }
 ```
+
+jabae
+```js
+function solution(n, t, m, p) {
+    let full = '';
+    for (let i = 0; full.length < t * m; i++) {
+        full += i.toString(n)
+    }
+    return full.split('')
+                .filter((el, i) => i % m === p - 1)
+                .slice(0, t)
+                .join('')
+                .toUpperCase();
+}
+```
