[Feat] daekim 코드추가

--- a/Level 1/07. 가운데 글자 가져오기.md
+++ b/Level 1/07. 가운데 글자 가져오기.md
@@ -12,3 +12,10 @@ function solution(s) {
     return len % 2 ? s[Math.floor(len / 2)] : s[len / 2 - 1] + s[len / 2];
 }
 ```
+
+daekim
+```js
+function solution(s) {
+    return s.length % 2 === 0 ? s[s.length / 2 - 1] + s[s.length / 2] : s[s.length / 2 - 0.5];
+}
+```
