--- a/Level 1/08. 내적.md
+++ b/Level 1/08. 내적.md
@@ -11,3 +11,10 @@ function solution(a, b) {
     return a.reduce((acc, cur, i) => acc + (cur * b[i]), 0);
 }
 ```
+
+daekim
+```js
+function solution(a, b) {
+    return a.reduce((acc, cur, i) => acc += (cur * b[i]), 0);
+}
+```
