[Feat] daekim 코드 추가

--- a/Level 2/10. 오픈채팅방.md
+++ b/Level 2/10. 오픈채팅방.md
@@ -37,4 +37,21 @@ function solution(record) {
 
 daekim
 ```js
+function solution(record) {
+    let objs = {};
+    let arr = record.map((el) => el.split(' '));
+    let ans = [];
+    
+    for (let i = arr.length - 1; i >= 0; i--)
+        if (!objs[arr[i][1]] && (arr[i][0] === 'Enter' || arr[i][0] === 'Change'))
+            objs[arr[i][1]] = arr[i][2];
+
+    arr.forEach((el, i) => {
+        if (arr[i][0] === 'Enter')
+            ans.push(objs[arr[i][1]] + "님이 들어왔습니다.");
+        else if (arr[i][0] === 'Leave')
+            ans.push(objs[arr[i][1]] + "님이 나갔습니다.");
+    });
+    return ans;
+}
 ```
