[Feat] daekim 코드 추가

--- a/Level 2/11. [3차]n진수 게임.md
+++ b/Level 2/11. [3차]n진수 게임.md
@@ -28,3 +28,16 @@ function solution(n, t, m, p) {
                 .toUpperCase();
 }
 ```
+
+daekim
+```js
+function solution(n, t, m, p) {
+    let total = '';
+    let ans = '';
+    for (let i = 0; total.length < t * m; i++)
+        total = total.concat(i.toString(n).toUpperCase());
+    for (let i = 0; i < t;)
+        ans += total[i++ * m + p - 1];
+    return (ans);
+}
+```
