[Feat] daekim 코드추가

--- a/Level 2/12. 피로도.md
+++ b/Level 2/12. 피로도.md
@@ -21,4 +21,20 @@ function solution(k, dungeons) {
 
 daekim
 ```js
+function solution(k, dungeons) {
+    let max = 0;
+    let tmp = 0;
+    function rec(cur, arr, cnt) {
+        arr.forEach((el, i) =>{
+            if (cur >= el[0])
+            {
+                tmp = rec(cur - el[1], arr.filter((e, idx) => idx !== i && e), cnt + 1);
+                max = tmp > max ? tmp : max;
+            }
+        });
+        return cnt;
+    }
+    rec(k, dungeons, max);
+    return max;
+}
 ```
