[Feat] jihyukim 코드 추가

--- a/Level 2/12. 피로도.md
+++ b/Level 2/12. 피로도.md
@@ -1,5 +1,17 @@
 jihyukim
 ```js
+function solution(k, dungeons) {
+    let max = 0;
+    function explore(fin, rp, dun) {
+        const arr = dun.filter((el) => el[0] <= rp)
+        if (arr.length === 0) max = Math.max(fin, max);
+        else arr.forEach((cur, i) => {
+            explore(fin + 1, rp - cur[1], arr.filter((el, j) => j != i))
+        })
+    }
+    explore(0, k, dungeons);
+    return max;
+}
 ```
 
 jabae
