[Fix] jihyukim 코드 추가

--- a/Level 2/12. 피로도.md
+++ b/Level 2/12. 피로도.md
@@ -5,6 +5,7 @@ function solution(k, dungeons) {
     function explore(fin, rp, dun) {
         const arr = dun.filter((el) => el[0] <= rp)
         if (arr.length === 0) max = Math.max(fin, max);
+        else if (arr.length === 1) max = Math.max(fin + (arr[0][0] <= rp), max);
         else arr.forEach((cur, i) => {
             explore(fin + 1, rp - cur[1], arr.filter((el, j) => j != i))
         })
