[Feat] daekim 코드 추가

--- a/Level 1/09. 문자열 내림차순으로 배치하기.md
+++ b/Level 1/09. 문자열 내림차순으로 배치하기.md
@@ -4,3 +4,10 @@ function solution(s) {
     return s.split('').sort().reverse().join('');
 }
 ```
+
+daekim
+```js
+function solution(s) {
+    return (s.split('').sort((a, b) => b.charCodeAt() - a.charCodeAt()).join(''));
+}
+```
