[Feat] 자배 코드 업뎃

--- a/Level 1/09. 문자열 내림차순으로 배치하기.md
+++ b/Level 1/09. 문자열 내림차순으로 배치하기.md
@@ -5,9 +5,11 @@ function solution(s) {
 }
 ```
 
-daekim
+jabae
 ```js
 function solution(s) {
-    return (s.split('').sort((a, b) => b.charCodeAt() - a.charCodeAt()).join(''));
+    return s.split('')
+            .sort((a, b) => b.charCodeAt() - a.charCodeAt())
+            .join('');
 }
 ```
