--- a/Level 1/10. 문자열 다루기 기본.md
+++ b/Level 1/10. 문자열 다루기 기본.md
@@ -4,3 +4,10 @@ function solution(s) {
     return !(s.length !== 4 && s.length !== 6 || /[^0-9]/.test(s));
 }
 ```
+
+daekim
+```js
+function solution(s) {
+    return (s.length === 4 || s.length === 6) && (/^[0-9]*$/).test(s);
+}
+```
