--- a/Level 2/13. [1차] 프렌즈4블록.md
+++ b/Level 2/13. [1차] 프렌즈4블록.md
@@ -44,3 +44,71 @@ function solution(m, n, board) {
     return ret;
 }
 ```
+
+
+
+daekim
+```js
+function solution(m, n, board) {
+    let count = 0;
+    let res = [[]];
+    function rec (origin, change, check) {
+        for (let i = 0; i < m - 1; i++)
+        {
+            for (let j = 0; j < n - 1; j++)
+            {
+                if (origin[i][j] !== '' && origin[i][j] === origin[i][j + 1] && origin[i][j] === origin[i + 1][j] && origin[i][j] === origin[i + 1][j + 1])
+                {
+                    change[i][j] = '';
+                    change[i][j + 1] = '';
+                    change[i + 1][j] = '';
+                    change[i + 1][j + 1] = '';
+                    check = 1;
+                }
+            }
+        }
+        for (let i = n - 1; i >= 0; i--)
+        {
+            for (let j = m - 1; j >= 0; j--)
+            {
+                if (change[j][i] === '')
+                {
+                    for (let k = j - 1; k >= 0; k--)
+                    {
+                        if (change[k][i] !== '')
+                        {
+                            [change[j][i], change[k][i]] = [change[k][i], change[j][i]]
+                            break;
+                        }
+                    }
+                }
+            }
+        }
+        // for (let i = 0; i < n - 1; i++)
+        // {
+        //     for (let j = 0; j < m; j++)
+        //     {
+        //         if (check !== 2 && change[j][i] !== '')
+        //             break;
+        //         if (j === m - 1)
+        //         {
+        //             for (let k = 0; k < m; k++)
+        //                 [change[k][i], change[k][i + 1]] = [change[k][i + 1], change[k][i]]
+        //             check = 2;
+        //         }
+        //     }
+        //     if (check === 2 && i === n - 2)
+        //         n--;
+        // }
+        if (check !== 0)
+            change = rec (change, change.slice().map(el => el.map(e => e)), 0);
+        return change;
+    }
+    res = rec (board.slice().map((el) => el.split('')), board.slice().map((el) => el.split('')));
+    for (let i = 0; i < res.length; i++)
+        for (let j = 0; j < res[i].length; j++)
+            if (res[i][j] === '')
+                count++;
+    return count;
+}
+```
