[Feat] 자배 코드 업뎃

--- a/Level 2/14. 스킬트리.md
+++ b/Level 2/14. 스킬트리.md
@@ -9,3 +9,21 @@ function solution(skill, skill_trees) {
     }).length;
 }
 ```
+
+jabae
+```js
+function solution(skill, skill_trees) {
+    const isValidRoute = (route) => {
+        let arr = [];
+        for (let i = 0; i < route.length; i++) {
+            if (skill.includes(route[i]))
+                arr.push(route[i]);
+        }
+        for (let i = 0; i < arr.length; i++) {
+            if (skill[i] !== arr[i]) return false;
+        }
+        return true;
+    }
+    return skill_trees.filter((el) => isValidRoute(el)).length;
+}
+```
