[Feat] daekim 코드 추가

--- a/Level 2/14. 스킬트리.md
+++ b/Level 2/14. 스킬트리.md
@@ -27,3 +27,17 @@ function solution(skill, skill_trees) {
     return skill_trees.filter((el) => isValidRoute(el)).length;
 }
 ```
+
+daekim
+```js
+function solution(skill, skill_trees) {
+    let cnt = 0;
+    function check(str, skill) {
+        let ret = 0;
+        str.filter((e) => skill.includes(e)).forEach((e, i) => {if(e !== skill[i]) ret = -1})
+        return ret === -1 ? 0 : 1;
+    }
+    skill_trees.forEach((el) => cnt += check(el.split(''), skill.split('')));
+    return cnt;
+}
+```
