[Feat] 자배 코드 업뎃

--- a/Level 2/13. [1차] 프렌즈4블록.md
+++ b/Level 2/13. [1차] 프렌즈4블록.md
@@ -45,7 +45,55 @@ function solution(m, n, board) {
 }
 ```
 
-
+jabae
+```js
+function solution(m, n, board) {
+    let answer = 0;
+    const clone = [];
+    for (let i = 0; i < n; i++) {
+        let arr = [];
+        for (let j = m - 1; j >= 0; j--) {
+             arr.push(board[j][i]);
+        }
+        clone.push(arr);
+    }
+    const rec = (clone, flag) => {
+        if (!flag) return ;
+        flag = 0;
+        let removed = 0;
+        const where = [];
+        const newClone = [];
+        const findLoc = (charac, x, y) => {
+            if (clone[x + 1].length < y + 2)
+                return false;   
+            if (clone[x][y + 1] === charac && clone[x + 1][y] === charac && clone[x + 1][y + 1] === charac)
+                return true;
+        }
+        clone.forEach((el, i) => {
+            for (let j = 0; j < el.length - 1 && i < clone.length - 1; j++) {
+                if ("ABCDEFGHIJKLMNOPQRSTUVWXYZ".includes(el[j]) && findLoc(el[j], i, j))
+                    where.push([i, j]);
+            }
+        })
+        where.forEach((el) => {
+            clone[el[0]][el[1]] = null;
+            clone[el[0]+1][el[1]] = null;
+            clone[el[0]][el[1]+1] = null;
+            clone[el[0]+1][el[1]+1] = null;
+        });
+        clone.forEach((cur) => {
+            const filtered = cur.filter((el) => el !== null);
+            newClone.push(filtered);
+            removed += cur.length - filtered.length;
+        })
+        flag = Math.max(flag, removed);
+        answer += removed;
+        rec(newClone, flag);
+    }
+    rec(clone, 1);
+    return answer;
+}
+```
 
 daekim
 ```js
