[Feat] jihyukim 코드 추가

--- a/Level 2/15. 연속 부분 수열 합의 개수.md
+++ b/Level 2/15. 연속 부분 수열 합의 개수.md
@@ -2,7 +2,7 @@ jihyukim
 ```js
 function solution(elements) {
     const sum = new Set();
-    const el = [...elements, ...elements];
+    const el = elements.concat(elements);
     for (let i = 1; i <= elements.length; i++) {
         for (let j = 0; j < elements.length; j++) {
             sum.add(el.slice(j, j + i).reduce((a, b) => a + b, 0));
