[Feat] 자배 코드 업뎃

--- a/Level 1/12. 행렬의 덧셈.md
+++ b/Level 1/12. 행렬의 덧셈.md
@@ -4,3 +4,12 @@ function solution(arr1, arr2) {
     return arr1.map((a1, i) => a1.map((a2, j) => a2 + arr2[i][j]));
 }
 ```
+
+jabae
+```js
+function solution(arr1, arr2) {
+    return arr1.reduce((acc, cur, i) => 
+                       [...acc, Array.from({length: cur.length}, (v, j) => cur[j] + arr2[i][j])]
+                       , []);
+}
+```
