[Feat] 자배 코드 업뎃

--- a/Level 1/11. 약수의 개수와 덧셈.md
+++ b/Level 1/11. 약수의 개수와 덧셈.md
@@ -6,3 +6,11 @@ function solution(left, right) {
     return ret;
 }
 ```
+
+jabae
+```js
+function solution(left, right) {
+    return Array.from({length: right - left + 1}, (v, i) => left + i)
+                .reduce((acc, cur) => Math.sqrt(cur) % 1 ? acc + cur : acc - cur, 0);
+}
+```
