[Feat] 자배 코드 업뎃

--- a/Level 2/15. 연속 부분 수열 합의 개수.md
+++ b/Level 2/15. 연속 부분 수열 합의 개수.md
@@ -11,3 +11,21 @@ function solution(elements) {
     return sum.size;
 }
 ```
+
+jabae
+```js
+function solution(elements) {
+    let answer = [elements.reduce((acc, cur) => acc + cur)];
+    const len = elements.length;
+    for (let i = 0; i < len - 1; i++) {
+        for (let j = 0; j < len; j++) {
+            let tmp = 0;
+            for (let z = 0; z <= i; z++) {
+                tmp += elements[(j + z) % len];
+            }
+            answer.push(tmp);
+        }
+    }
+    return Array.from(new Set(answer)).length;
+}
+```
