[Feat] 자배 코드 업뎃

--- a/Level 2/16. 방문 길이.md
+++ b/Level 2/16. 방문 길이.md
@@ -35,3 +35,32 @@ function solution(dirs) {
     return cnt;
 }
 ```
+
+jabae
+```js
+function solution(dirs) {
+    const move = {U: [0, +1], D: [0, -1], R: [+1, 0], L: [-1, 0]};
+    let last = [0, 0];
+    let tmp = [];
+    let x = 0;
+    let y = 0;
+    const checkExper = (needle, haystack) => {
+        for (let i = 0; i < haystack.length; i++)
+            if (JSON.stringify(needle) === JSON.stringify(haystack[i]) || 
+                JSON.stringify(needle) === JSON.stringify([...haystack[i].slice(2), ...haystack[i].slice(0, 2)]))
+                return false;
+        return true;
+    }
+    const loc = dirs.split('').reduce((acc, cur, i) => {
+        x = last[0] + move[cur][0];
+        y = last[1] + move[cur][1];
+        if (Math.abs(x) > 5 || Math.abs(y) > 5) return acc;
+        tmp = [...last, x, y];
+        last = [x, y];
+        if (checkExper(tmp, acc)) acc.push(tmp);
+        return acc;
+    }, []);
+
+    return loc.length;
+}
+```
