[Feat] add daekim code

--- a/Level 1/11. 약수의 개수와 덧셈.md
+++ b/Level 1/11. 약수의 개수와 덧셈.md
@@ -14,3 +14,13 @@ function solution(left, right) {
                 .reduce((acc, cur) => Math.sqrt(cur) % 1 ? acc + cur : acc - cur, 0);
 }
 ```
+
+daekim
+```js
+function solution(left, right) {
+    let sum = 0; 
+    for (let i = left; i <= right; i++)
+        sum += Math.sqrt(i) % 1 === 0 ? -i : +i;
+    return sum;
+}
+```
