[Feat] add daekim code

--- a/Level 1/12. 행렬의 덧셈.md
+++ b/Level 1/12. 행렬의 덧셈.md
@@ -13,3 +13,10 @@ function solution(arr1, arr2) {
                        , []);
 }
 ```
+
+daekim
+```js
+function solution(arr1, arr2) {
+    return arr1.reduce((acc, cur, idx) => {acc.push(cur.reduce((a, c, i) => {a.push(c + arr2[idx][i]); return a},[])); return acc},[]);
+}
+```
