[Feat] add daekim code

--- a/Level 2/15. 연속 부분 수열 합의 개수.md
+++ b/Level 2/15. 연속 부분 수열 합의 개수.md
@@ -29,3 +29,24 @@ function solution(elements) {
     return Array.from(new Set(answer)).length;
 }
 ```
+
+daekim
+```js
+function solution(elements) {
+    const set = new Set;
+    let sum, idx;
+    for(let i = 0; i < elements.length; i++)
+    {
+        sum = 0;
+        idx = i;
+        for (let j = 1; j <= elements.length; j++)
+        {
+            sum += elements[idx++];
+            set.add(sum);
+            if (idx === elements.length)
+                idx = 0;
+        }
+    }
+    return set.size
+}
+```
