--- a/Level 2/16. 방문 길이.md
+++ b/Level 2/16. 방문 길이.md
@@ -3,7 +3,6 @@ jihyukim
 function solution(dirs) {
     const point = new Set();
     let cur = [0, 0];
-    let cnt = 0;
     
     const move = (des) => {
         if (des[0] > 5 || des[0] < -5 || des[1] > 5 || des[1] < -5)
@@ -11,7 +10,6 @@ function solution(dirs) {
         if (!point.has(cur + ',' + des)) {
             point.add(cur + ',' + des);
             point.add(des + ',' + cur);
-            cnt += 1;
         }
         cur = des;
     }
@@ -32,7 +30,7 @@ function solution(dirs) {
                 break;
         }
     }
-    return cnt;
+    return point.size / 2;
 }
 ```
 
