[Feat] 자배 코드 업뎃

--- a/Level 1/13. 부족한 금액 계산하기.md
+++ b/Level 1/13. 부족한 금액 계산하기.md
@@ -6,3 +6,14 @@ function solution(price, money, count) {
     return total > money ? total - money : 0;
 }
 ```
+
+jabae
+```js
+function solution(price, money, count) {
+    let totalFee = 0;
+    for (let i = 1; i <= count; i++) {
+        totalFee += price * i;
+    }
+    return money < totalFee ? (money - totalFee) * -1 : 0;
+}
+```
