[Feat] 대킴 코드 추가

--- a/Level 1/13. 부족한 금액 계산하기.md
+++ b/Level 1/13. 부족한 금액 계산하기.md
@@ -17,3 +17,11 @@ function solution(price, money, count) {
     return money < totalFee ? (money - totalFee) * -1 : 0;
 }
 ```
+
+daekim
+```js
+function solution(price, money, count) {
+    let ret = count % 2 === 0 ? price * (count + 1) * (count / 2) - money : price * (count + 1) * (count / 2 - 0.5) + price * (count / 2 + 0.5) - money
+    return ret > 0 ? ret : 0;
+}
+```
