[Feat] 대킴 코드 추가

--- a/Level 1/14. 직사각형 별찍기.md
+++ b/Level 1/14. 직사각형 별찍기.md
@@ -14,4 +14,12 @@ process.stdin.on('data', data => {
 
 daekim
 ```js
+process.stdin.setEncoding('utf8');
+process.stdin.on('data', data => {
+    const n = data.split(" ");
+    const a = Number(n[0]), b = Number(n[1]);
+    let str = '*'.repeat(a);
+    for (let i = 0; i < b; i++)
+        console.log(str);
+});
 ```
