[Feat] 자배 코드 업뎃

--- a/Level 2/18. 파일명 정렬.md
+++ b/Level 2/18. 파일명 정렬.md
@@ -4,6 +4,38 @@ jihyukim
 
 jabae
 ```js
+function solution(files) {
+    const obj = new Set();
+    files.forEach((el) => {
+        let h = '';
+        let n = '';
+        let t = '';
+        let i = 0;
+        while (el[i] && !(/^['0-9']*$/).test(el[i])) {
+            h += el[i];
+            i++;
+        }
+        while (el[i] && (/^['0-9']*$/).test(el[i])) {
+            n += el[i];
+            i++;
+        }
+        t = el.slice(i);
+        obj.add({h: h, n: n, t: t});
+    });
+    const mySort = (obj1, obj2) => {
+        const h1 = obj1.h.toLowerCase();
+        const h2 = obj2.h.toLowerCase();
+        if (h1 > h2) return 1;
+        else if (h1 < h2) return -1;
+        const n1 = Number(obj1.n);
+        const n2 = Number(obj2.n);
+        return n1 - n2;
+    }
+    return [...obj].sort((a, b) => mySort(a, b)).reduce((acc, el) => {
+        acc.push(`${el.h}${el.n}${el.t}`);
+        return acc;
+    }, []);
+}
 ```
 
 daekim
