[Feat] 자배 코드 업뎃

--- a/Level 2/17. 모음사전.md
+++ b/Level 2/17. 모음사전.md
@@ -4,6 +4,19 @@ jihyukim
 
 jabae
 ```js
+function solution(word) {
+    const key = ["A", "E", "I", "O", "U"];
+    const dic = [];
+    const rec = (str, cnt) => {
+        if (cnt > 5) return;
+        dic.push(str);
+        key.forEach((el) => {
+            rec(str + el, cnt + 1);
+        })
+    }
+    rec("", 0);
+    return dic.sort().indexOf(word);
+}
 ```
 
 daekim
