--- a/Level 2/17. 모음사전.md
+++ b/Level 2/17. 모음사전.md
@@ -15,7 +15,7 @@ function solution(word) {
         })
     }
     rec("", 0);
-    return dic.sort().indexOf(word);
+    return dic.indexOf(word);
 }
 ```
 
