[Feat] jihyukim 코드 추가

--- a/Level 2/18. 파일명 정렬.md
+++ b/Level 2/18. 파일명 정렬.md
@@ -1,5 +1,25 @@
 jihyukim
 ```js
+function solution(files) {
+    const num = '0123456789';
+    return files
+        .map(el => {
+            const obj = {};
+            let i = 0, j = 0;
+            while (!num.includes(el[i])) i++;
+            while (num.includes(el[i + j])) j++;
+            obj['HEAD'] = el.substring(0, i);
+            obj['NUM'] = el.substring(i, i + j);
+            obj['TAIL'] = el.substring(i + j);
+            return obj;
+        }).sort((a, b) => {
+            const A = a.HEAD.toUpperCase();
+            const B = b.HEAD.toUpperCase();
+            if (A > B) return 1;
+            if (A < B) return -1;
+            if (A === B) return a.NUM - b.NUM;
+        }).map(el => el.HEAD + el.NUM + el.TAIL);
+}
 ```
 
 jabae
