[Feat] jihyukim 코드 추가

--- a/Level 1/14. 직사각형 별찍기.md
+++ b/Level 1/14. 직사각형 별찍기.md
@@ -1,5 +1,12 @@
 jihyukim
 ```js
+process.stdin.setEncoding('utf8');
+process.stdin.on('data', data => {
+    const n = data.split(" ");
+    const w = Number(n[0]), h = Number(n[1]);
+    const str = '*'.repeat(w);
+    for (let i = 0; i < h; i++ ) console.log(str);
+});
 ```
 
 jabae
