[Feat] jihyukim 코드 추가

--- a/Level 1/15. 최대공약수와 최소공배수.md
+++ b/Level 1/15. 최대공약수와 최소공배수.md
@@ -1,7 +1,12 @@
 jihyukim
 ```js
-
-
+function solution(n, m) {
+    let ret = [Math.min(n, m) + 1, Math.max(n, m) - 1];
+    
+    while (--ret[0] > 0) if (!(n % ret[0]) && !(m % ret[0])) break;
+    while (++ret[1]) if (!(ret[1] % n) && !(ret[1] % m)) break;
+    return ret;
+}
 ```
 
 jabae
