--- a/Level 1/16. 같은 숫자는 싫어.md
+++ b/Level 1/16. 같은 숫자는 싫어.md
@@ -1,6 +1,11 @@
 jihyukim
 ```js
-
+function solution(arr) {
+    return arr.reduce((acc, cur) => {
+        if (acc[acc.length - 1] !== cur) acc.push(cur);
+        return acc;
+    }, []);
+}
 ```
 
 jabae
