--- a/Level 1/17. 이상한 문자 만들기.md
+++ b/Level 1/17. 이상한 문자 만들기.md
@@ -1,6 +1,8 @@
 jihyukim
 ```js
-
+function solution(s) {
+    return s.toLowerCase().split(' ').map((el) => el.split('').map((e, i) => i % 2 ? e : e.toUpperCase()).join('')).join(' ');
+}
 ```
 
 jabae
