--- a/Level 2/20. 2개 이하로 다른 비트.md
+++ b/Level 2/20. 2개 이하로 다른 비트.md
@@ -2,8 +2,8 @@ jihyukim
 ```js
 function f(num) { 
     const i = num.lastIndexOf('0');
-    const n = i + 1 < num.length ? '10' + num.substring(i + 2) : '1';
-    return parseInt(num.substring(0, i) + n, 2);
+    const b = i + 1 < num.length ? '10' + num.substring(i + 2) : '1';
+    return parseInt(num.substring(0, i) + b, 2);
 }
 
 function solution(numbers) {
